--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="br.com.zup.simcityrickandmorty">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.SimCityRickAndMorty"
         tools:targetApi="31">
         <activity
-            android:name=".ui.characterslist.view.CharactersListActivity"
+            android:name=".CharactersListActivity"
             android:exported="false" />
         <activity
             android:name=".ui.splash.view.SplashActivity"
