--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
 
     //material components
     implementation 'com.google.android.material:material:1.6.1'
+
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
