--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.SimCityRickAndMorty"
         tools:targetApi="31">
         <activity
-            android:name=".ui.characterslist.view.CharactersListActivity"
+            android:name="br.com.zup.simcityrickandmorty.ui.home.HomeActivity"
             android:exported="false" />
         <activity
             android:name=".ui.splash.view.SplashActivity"
