--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,8 @@ dependencies {
     //room
     implementation("androidx.room:room-runtime:2.4.2")
     kapt("androidx.room:room-compiler:2.4.2")
+
+    //navigation
+    implementation("androidx.navigation:navigation-fragment-ktx:2.5.0")
+    implementation("androidx.navigation:navigation-ui-ktx:2.5.0")
 }
